--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "['bat']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,6 +146,273 @@
    "source": [
     "spam = ['cat', 'bat', 'rat', 'elephant']\n",
     "spam[1:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 'A', 'B', 'C']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2, 3] + ['A', 'B', 'C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['X', 'Y', 'Z', 'X', 'Y', 'Z', 'X', 'Y', 'Z']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "['X', 'Y', 'Z'] * 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 'A', 'B', 'C']\n"
+     ]
+    }
+   ],
+   "source": [
+    "spam = [1, 2, 3]\n",
+    "spam = spam + ['A', 'B', 'C']\n",
+    "print(spam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of cat 1 (Or enter nothing to stop.):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " raj\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of cat 2 (Or enter nothing to stop.):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ram\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of cat 3 (Or enter nothing to stop.):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " don\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of cat 4 (Or enter nothing to stop.):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " tim\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of cat 5 (Or enter nothing to stop.):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " cook\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of cat 6 (Or enter nothing to stop.):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cat names are:\n",
+      "  raj\n",
+      "  ram\n",
+      "  don\n",
+      "  tim\n",
+      "  cook\n"
+     ]
+    }
+   ],
+   "source": [
+    "catNames = []\n",
+    "while True:\n",
+    "    print('Enter the name of cat ' + str(len(catNames) + 1) +\n",
+    "      ' (Or enter nothing to stop.):')\n",
+    "    name = input()\n",
+    "    if name == '':\n",
+    "        break\n",
+    "    catNames = catNames + [name] # list concatenation\n",
+    "print('The cat names are:')\n",
+    "for name in catNames:\n",
+    "    print('  ' + name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ron\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ron\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=input()\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "Index 0 in supplies is: pens\n",
+      "Index 1 in supplies is: staplers\n",
+      "Index 2 in supplies is: flame-throwers\n",
+      "Index 3 in supplies is: binders\n"
+     ]
+    }
+   ],
+   "source": [
+    "supplies = ['pens', 'staplers', 'flame-throwers', 'binders']\n",
+    "print(len(supplies))\n",
+    "for i in range(len(supplies)):\n",
+    "    print('Index ' + str(i) + ' in supplies is: ' + supplies[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'howdy' in ['hello', 'hi', 'howdy', 'heyas']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam = ['hello', 'hi', 'howdy', 'heyas']\n",
+    "'cat' in spam\n",
+    "'howdy' not in spam\n",
+    "'cat' not in spam\n"
    ]
   }
  ],
