--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -43,6 +43,78 @@
     "phonebook.pop(\"Jack\")\n",
     "print(phonebook)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fname': 'Joe', 'lname': 'Fonebone', 'age': 51, 'spouse': 'Edna', 'children': ['Ralph', 'Betty', 'Joey'], 'pets': {'dog': 'Fido', 'cat': 'Sox'}}\n",
+      "Joey\n",
+      "Sox\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dictionry can be built from scratch in the following manner .....and can have sub lists and sub dictonaries as its items\n",
+    "person = {}\n",
+    "person['fname'] = 'Joe'\n",
+    "person['lname'] = 'Fonebone'\n",
+    "person['age'] = 51\n",
+    "person['spouse'] = 'Edna'\n",
+    "person['children'] = ['Ralph', 'Betty', 'Joey']\n",
+    "person['pets'] = {'dog': 'Fido', 'cat': 'Sox'}\n",
+    "print(person)\n",
+    "print(person['children'][-1])\n",
+    "print(person['pets']['cat'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A tuple cand also be a key in dictionary.immutable types you are familiar with—integer, float, string, and Boolean—have served as dictionary keys\n",
+    "# However, neither a list nor another dictionary can serve as a dictionary key, because lists and dictionaries are mutable:\n",
+    "d = {(1, 1): 'a', (1, 2): 'b', (2, 1): 'c', (2, 2): 'd'}\n",
+    "print(d[(1,1)])\n",
+    "print(d[(2,1)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {0: 'a', 1: 'a', 2: 'a'}\n",
+    "0 in d"
+   ]
   }
  ],
  "metadata": {
